--- a/ShoppingReminder.Domain/ShoppingReminder.Domain.csproj
+++ b/ShoppingReminder.Domain/ShoppingReminder.Domain.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="src\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
 
 </Project>
