add migrations and use user secrets for local development

--- a/ShoppingReminder.API/appsettings.json
+++ b/ShoppingReminder.API/appsettings.json
@@ -1,9 +1,19 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "Secret": "",
+    "Issuer": "ShoppingReminderAPI",
+    "Audience": "ShoppingReminderApp",
+    "ExpirationInMinutes": 60,
+    "RefreshTokenExpirationInDays": 7
   },
   "AllowedHosts": "*"
 }
