--- a/ShoppingReminder.Application/ShoppingReminder.Application.csproj
+++ b/ShoppingReminder.Application/ShoppingReminder.Application.csproj
@@ -12,10 +12,17 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="MediatR" Version="14.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ShoppingReminder.Domain\ShoppingReminder.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Common\Behaviors\" />
+    <Folder Include="Features\Authentication\Commands\Login\" />
+    <Folder Include="Features\Authentication\Common\" />
   </ItemGroup>
 
 </Project>
